frontend/test/should_fail/retype_019iter.grg
using retype_model_001;

rule r {
	x:TYPE1;

	iterated {
		.;
		modify {
			y:TYPE2<x>;
		}
	}

	modify {
	}

}

